@@ -1,5 +1,13 @@
 2021-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	[sfnt] Avoid some memory zeroing.
+
+	* src/sfnt/sfobjs.c (sfnt_open_font, sfnt_init_face,
+	tt_name_ascii_from_{utf16,other}): Tweak allocaton macros.
+	* src/sfnt/ttload.c (tt_face_load_name): Ditto.
+
+2021-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	* src/sfnt/ttpost.c (load_format_{20,25}): Tweak allocaton macros.
 
 2021-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
